plugins {
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'org.siouan.frontend' version '1.1.0'
}


version '1.0'

sourceCompatibility = 16

repositories {
    maven { url 'https://www.jitpack.io' }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
    jcenter()
    maven {
        url 'https://repo.clojars.org'
        name 'Clojars'
    }
    maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
    maven{ url "https://oss.sonatype.org/content/repositories/releases/" }
    maven{ url 'https://jitpack.io' }
}

frontend {
    nodeVersion = '16.13.2'
    // See 'scripts' section in your 'package.json file'
    cleanScript = 'run clean'
    assembleScript = 'run assemble'
    checkScript = 'run check'
}

ext {
    //the build number that this plugin is made for
    arcVersion = 'v131'
    mindustryVersion = 'getMapScreenshot'
}

dependencies {
    implementation 'org.jsoup:jsoup:1.14.3'
//    compileOnly("com.github.fuzzbuck.Mindustry:core:$mindustryVersion")
//    compileOnly("com.github.fuzzbuck.Mindustry:server:$mindustryVersion")
    implementation group: 'org.json', name: 'json', version: '20210307'
    compileOnly('org.glassfish.jersey.core:jersey-client:3.0.4')
    compileOnly('org.apache.commons:commons-pool2:2.10.0')

    implementation('org.javacord:javacord:3.4.0')
    compileOnly('javax.ws.rs:javax.ws.rs-api:2.1.1')
    implementation("net.dv8tion:JDA:4.3.0_277")
    implementation 'com.google.code.gson:gson:2.9.0'



    // ---------------- website- -------------
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.6.4'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.4'
    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.4'
    implementation 'org.springframework.boot:spring-boot-devtools:2.6.4'
//    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'

    implementation 'com.github.eirslett:frontend-maven-plugin:1.12.1'
    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.4'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    implementation 'org.postgresql:postgresql:42.3.3'
    runtimeOnly 'com.h2database:h2'
    implementation 'org.hibernate:hibernate-java8:5.6.5.Final'
//    implementation 'org.h2database:h2'
    // ssl cretifcate
    implementation 'com.github.valb3r.letsencrypt-helper:letsencrypt-helper-tomcat:0.2.4'
//    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.3.0.RELEASE'
    implementation "com.github.Anuken.Arc:arc-core:db7090ae8a694b918a7bcdc3565deb8d2acf71ab"
    implementation "com.github.Anuken.Mindustry:core:2ae7863caed3023d14140d2fe84723802d8f78ab"
}

jar {
    version = null
    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.findAll { !it.name.endsWith('pom') }.collect { it.isDirectory() ? it : zipTree(it) }
    }

    doFirst {
        manifest(({
            if (!configurations.runtimeClasspath.isEmpty()) {
                attributes(
                        'Class-Path': configurations.runtimeClasspath.collect { it.toURI().toString() }.join(' '),
                        'Main-Class': 'systembot.SystemBot')
            }
        } as groovy.lang.Closure<?>))
    }
}

bootJar {
    manifest {
        attributes 'Start-Class': 'systembot.Main'
    }
}
